2005-01-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Fix for config files

2005-01-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Fixes for Eris-1.3.3

2005-01-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Added newline at end of files.
	* Fix include of Ogre.h

2005-01-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Fix for config files.
	* Use /usr/lib/OGRE as default path for plugins.

2005-01-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Fix depends
	* Fix for config files

2005-01-30  Erik Hjortsberg  <erik@katastrof.nu>

	* delay inclusion of SDL headers in order not to confuse autoconf

2005-01-23  Erik Hjortsberg  <erik@katastrof.nu>

	* Added tahoma-10 font definition.
	* Changed default resolution to 1024x768

2005-01-23  Erik Hjortsberg  <erik@katastrof.nu>

	* Make default mouse movement factor greater
	* Reworked the way widgets are loaded. Now each widget is associated to a string (a name). This allows us to use text files for defining which widgets should be loaded for which game type etc.
	* Added more error checks to Model.

2005-01-22  Erik Hjortsberg  <erik@katastrof.nu>

	* updated INSTALL, TODO and README texts
	* added support to the config file for fog distance and camera movement
	* added some more error checking code. If some media is missing it should only report the error and continue.

2005-01-22  Erik Hjortsberg  <erik@katastrof.nu>

	* fixes to the input system

2005-01-22  Erik Hjortsberg  <erik@katastrof.nu>

	* added hooks to deer animations

2005-01-22  Erik Hjortsberg  <erik@katastrof.nu>

	* include forgotten help widget

2005-01-22  Erik Hjortsberg  <erik@katastrof.nu>

	* Rewrote the input system. I've completely removed Ogre's input system and replaced it.
	Ember now only depends on SDL for input.
	This fixes all of the mouse issues as well as the issues with international characters.

2005-01-09  Erik Hjortsberg  <erik@katastrof.nu>

	* Adapt to Eris 1.3.2

2005-01-07  Erik Hjortsberg  <erik@katastrof.nu>

	* Fix for distcheck.
