@@ -1,3 +1,8 @@
+2005-02-02  Erik Hjortsberg  <erik@katastrof.nu>
+
+	* removed obsolete files
+	* added spec file for media
+
 2005-01-30  Erik Hjortsberg  <erik@katastrof.nu>
 
 	* Fix for config files
